--- a/docs/assignment561/fe561.Rmd
+++ b/docs/assignment561/fe561.Rmd
@@ -136,25 +136,25 @@ The probability of "even head" is $\frac12$.
 
 For $X\sim Negative\ Binomial(r=2,p=\frac12)$,
 
-$$f_X(x)=\binom{x+r-1}{r-1}p^r(1-p)^x=\binom{x+1}{1}\frac12^2\frac12^x=\frac{x+1}42^{-x}, x \in 0,1,2..$$
+$$f_X(x)=\binom{x-1}{r-1}p^r(1-p)^{x-r}=\binom{x-1}{1}\frac12^2\frac12^{x-2}=(x-1)2^{-x}, x \in r,r+1,r+2..$$
 
-$$E[X]=\frac{r(1-p)}p=2;\quad Var[X]=\frac{r(1-p)}{p^2}=4$$
+$$E[X]=\frac{r}p=4;\quad Var[X]=\frac{r(1-p)}{p^2}=4$$
 
 ****
 
 #### 9.
 
-For X is a probability function, $\lim_{x\to\infty}F(X)=1$
+For X is a probability function, let F(X) is the CDF of X,
 
-$$F(X)=\sum_{-\infty}^\infty f(x)=\sum_{a}^\infty cp(1-p)^{x-1}=c\left(\sum_{x=1}^\infty p(1-p)^{x-1}-\sum_{x=1}^{a-1}p(1-p)^{x-1}\right)$$
+$$F(X)=\sum_{-\infty}^\infty f(x)=\sum_{a}^\infty cp(1-p)^{x-1}=c\left[\sum_{x=1}^\infty p(1-p)^{x-1}-\sum_{x=1}^{a-1}p(1-p)^{x-1}\right]=c\left[\sum_{x=1}^\infty p(1-p)^{x-1}-1+(1-p)^{a-1}\right]$$
 
-For CDF for Geometric function, $\sum_{x=1}^\infty p(1-p)^{x-1}=1, x=1,2,3,..$
+For CDF of Geometric function, $\lim_{x\to\infty}\sum_{x=1}^\infty p(1-p)^{x-1}=1, x=1,2,3,..$
 
-$$F(X)=c\left(1-\sum_{x=1}^{a-1}p(1-p)^{x-1}\right)=c(1-p)^{a-1}=1$$
+And for X is a probability function, $\lim_{x\to\infty}F(X)=1$
 
-$$\therefore c=(1-p)^{1-a}$$
+$$lim_{x\to\infty}F(X)=c\left[1-1+(1-p)^{a-1}\right]=c(1-p)^{a-1}=1\implies c=(1-p)^{1-a}$$
 
-$$f_X(x)=\begin{cases}p(1-p)^{(x+1-a)-1} & x+1-a=1,2,3..\\0 & otherwise\end{cases}$$
+$$\therefore f_X(x)=\begin{cases}p(1-p)^{(x+1-a)-1} & x+1-a=1,2,3..\\0 & otherwise\end{cases}$$
 Which still is a Geometric function.
 
 $$E(x+1-a)=E(x)+1-a=\frac1p \implies E(x)=\frac1p+a-1$$
